// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListBox component testing DualListBox 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kuSbTi"
  >
    <ul
      class="sc-jqUVSM bBFcLq"
    />
    <hr
      class="sc-fLlhyt cCPNfc"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-fEOsli hnUSIG"
    >
      <div
        class="sc-bjUoiL hVrQLb"
      >
        <p
          class="sc-kgflAQ irzJzh"
          color="#041C33"
          font-size="13px"
        >
          <span
            class="sc-kgflAQ gHoRxB"
            color="#0B82F4"
            font-size="13px"
          >
            0 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-idiyUo"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kuSbTi"
  >
    <ul
      class="sc-jqUVSM bBFcLq"
    >
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              foo
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              bar
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              hoge
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie hlbDuP dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              fuga
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-fLlhyt cCPNfc"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-fEOsli hnUSIG"
    >
      <div
        class="sc-bjUoiL hVrQLb"
      >
        <p
          class="sc-kgflAQ irzJzh"
          color="#041C33"
          font-size="13px"
        >
          <span
            class="sc-kgflAQ gHoRxB"
            color="#0B82F4"
            font-size="13px"
          >
            0 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-idiyUo"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems and selectedItems 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kuSbTi"
  >
    <ul
      class="sc-jqUVSM bBFcLq"
    >
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              checked=""
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              foo
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              checked=""
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              bar
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              checked=""
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              hoge
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie hlbDuP dcUJGp"
      >
        <div
          class="sc-dkzDqf hETaFj"
          display="flex"
        >
          <label
            class="sc-hAZoDl cnpnnO"
          >
            <input
              checked=""
              class="sc-ksZaOG etQTLn"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fnykZs hZrbBW"
            >
              fuga
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-fLlhyt cCPNfc"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-fEOsli hnUSIG"
    >
      <div
        class="sc-bjUoiL hVrQLb"
      >
        <p
          class="sc-kgflAQ irzJzh"
          color="#041C33"
          font-size="13px"
        >
          <span
            class="sc-kgflAQ gHoRxB"
            color="#0B82F4"
            font-size="13px"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-idiyUo"
      >
        <li
          class="sc-dIouRR dpFGJS"
        >
          foo
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-dIouRR dpFGJS"
        >
          bar
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-dIouRR dpFGJS"
        >
          hoge
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-dIouRR bBTgfH"
        >
          fuga
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems and selectedItems without checkbox 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kuSbTi"
  >
    <ul
      class="sc-jqUVSM bBFcLq"
    >
      <li
        class="sc-kDDrLX sc-crXcEl kxcdly ijUaIR"
      >
        <div
          class="sc-hKMtZM iUXxdT sc-evZas eErWgj"
        >
          <div
            aria-controls="accordion-content-[object Object]"
            aria-expanded="false"
            class="sc-dkzDqf sc-eCYdqJ bURUGj gfrOjD"
            display="flex"
            role="button"
            tabindex="0"
          >
            <div
              class="sc-jSMfEi kusyTI"
            >
              <div
                class="sc-breuTD dBXdmY"
              >
                <div
                  class="sc-dkzDqf cyQQCs"
                  display="flex"
                >
                  bar
                </div>
              </div>
            </div>
            <div
              class="sc-ftvSup ecProy"
            >
              <div
                class="sc-iBkjds ixDsgp"
              >
                <span
                  class="sc-gsnTZi ezZeqd"
                  size="18"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                    />
                    <path
                      d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                      fill="black"
                      transform="translate(-1.414 -1.114)"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-papXJ gvktiO"
            height="0px"
            overflow="hidden"
          >
            <ul
              class="sc-jqUVSM bBFcLq"
            >
              <li
                class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
              >
                <div
                  class="sc-dkzDqf hmerDF"
                  display="flex"
                >
                  bar1
                </div>
              </li>
              <li
                class="sc-kDDrLX sc-iqcoie hlbDuP dcUJGp"
              >
                <div
                  class="sc-dkzDqf crcYbC"
                  display="flex"
                >
                  bar2
                </div>
              </li>
            </ul>
          </div>
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie kxcdly dcUJGp"
      >
        <div
          class="sc-dkzDqf imhdtk"
          display="flex"
        >
          hoge
        </div>
      </li>
      <li
        class="sc-kDDrLX sc-iqcoie hlbDuP dcUJGp"
      >
        <div
          class="sc-dkzDqf kMlSag"
          display="flex"
        >
          fuga
        </div>
      </li>
    </ul>
    <hr
      class="sc-fLlhyt cCPNfc"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-fEOsli hnUSIG"
    >
      <div
        class="sc-bjUoiL hVrQLb"
      >
        <p
          class="sc-kgflAQ irzJzh"
          color="#041C33"
          font-size="13px"
        >
          <span
            class="sc-kgflAQ gHoRxB"
            color="#0B82F4"
            font-size="13px"
          >
            1 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-idiyUo"
      >
        <li
          class="sc-dIouRR bBTgfH"
        >
          foo
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox selectedItems 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kuSbTi"
  >
    <ul
      class="sc-jqUVSM bBFcLq"
    />
    <hr
      class="sc-fLlhyt cCPNfc"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-fEOsli hnUSIG"
    >
      <div
        class="sc-bjUoiL hVrQLb"
      >
        <p
          class="sc-kgflAQ irzJzh"
          color="#041C33"
          font-size="13px"
        >
          <span
            class="sc-kgflAQ gHoRxB"
            color="#0B82F4"
            font-size="13px"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-idiyUo"
      >
        <li
          class="sc-dIouRR dpFGJS"
        >
          foo
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-dIouRR dpFGJS"
        >
          bar
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-dIouRR dpFGJS"
        >
          hoge
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-dIouRR bBTgfH"
        >
          fuga
          <div
            class="sc-dmRaPn fQPlCU"
          >
            <button
              class="sc-hHLeRK kuTMAn"
              type="button"
            >
              <span
                class="sc-gsnTZi ezZeqd"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
